# NastyMathCPP

./: .gitignore  CMakeLists.txt  DAE.cpp  DAE.h  DAE.inl  DetMinor.cpp  Examples.cpp  Examples.h  Exceptions.h  LICENSE  Matricies.cpp  Matricies.h  Parser.cpp  Parser.h  README.md  ReadMe.txt  Symbolic.cpp  Symbolic.h  Utils.cpp  Utils.h  Utils.inl  main.cpp  stdafx.cpp  stdafx.h
CMake/: PrecompiledHeader.cmake
Matrix/: BaseMatrix.h  BaseMatrix.inl  BlockMatrix.h  BlockMatrix.inl  RealMatrix.cpp  RealMatrix.h  SymbolicMatrix.cpp  SymbolicMatrix.h  SymbolicMatrix.inl
Symbolic/: Composition.cpp  Composition.h  Composition.inl  GinacImpl.cpp  LatexContext.cpp  LatexContext.h  MatrixProduct.cpp  MatrixProduct.h  MatrixSymbol.cpp  MatrixSymbol.h  Scalar.cpp  Scalar.h  Sum.cpp  Sum.h  Sum.inl
tex/: in.tex
